--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                                                       class="fa-brands fa-instagram"></i></a>
 
                                     </div>
-                                    <a href="images/My Resume.pdf" download class="btn btn2">My CV</a>
+                                    <a href="images/Resume Nishant Kumar.pdf" download class="btn btn2">My CV</a>
                                     <a href="image/My Graphical Resume 2 (3).jpg" download class="btn btn2">My Graphical
                                           CV</a>
 
